# Kamisado

./: .gitignore  CMakeLists.txt  Makefile  README.md  analyze_delta.py  analyze_party.py  index.cpp  model_white.pt
game/Kamisado/: Coordinates.cpp  Engine.cpp~  Engine.h  MCTSPlayer.h  Move.cpp  Move.h  Player.h  State.cpp  enum_utils.h  main.cpp
games/kamisado/: CMakeLists.txt  Engine.cpp  Node.h  Player.cpp  RandomPlayer.cpp  RandomPlayer.h  State.h
src/: CMakeLists.txt  openxum-ws-cpp.pc.in
src/app/: CMakeLists.txt  ia-mode.cpp  lambda-mode.cpp  main.cpp  version.hpp.in
src/openxum/: CMakeLists.txt
src/openxum/ai/: CMakeLists.txt
src/openxum/ai/common/: CMakeLists.txt  mcts_player.cpp  mcts_player.hpp  node.cpp  node.hpp  random_player.cpp  random_player.hpp
src/openxum/ai/specific/: CMakeLists.txt
src/openxum/ai/specific/kamisado/: CMakeLists.txt  MCTSPlayer.cpp  MCTSPlayer.h  Node.cpp  Node.h  Player.h  RandomPlayer.h  lambda_mcts.hpp  mcts_player.cpp  mcts_player.hpp  node.cpp  node.hpp  random_player.cpp  random_player.hpp
src/openxum/ai/specific/kikotsoka/: CMakeLists.txt  mcts_player.hpp  random_player.hpp
src/openxum/ai/specific/kikotsoka-polyomino/: CMakeLists.txt  mcts_player.hpp  random_player.hpp
src/openxum/core/: CMakeLists.txt
src/openxum/core/common/: CMakeLists.txt  decision.hpp  engine.hpp  move.hpp  player.hpp
src/openxum/core/games/: CMakeLists.txt
src/openxum/core/games/kamisado/: CMakeLists.txt  color.hpp  coordinates.cpp  coordinates.hpp  decision.cpp  decision.hpp  decision_type.hpp  engine.cpp  engine.hpp  game_type.hpp  main.cpp  move.cpp  move.hpp  move_type.hpp  phase.hpp  state.cpp  state.hpp  tower_color.hpp
src/openxum/core/games/kikotsoka/: CMakeLists.txt  color.hpp  coordinates.cpp  coordinates.hpp  decision.cpp  decision.hpp  decision_type.hpp  engine.cpp  engine.hpp  game_type.hpp  move.cpp  move.hpp  move_type.hpp  phase.hpp  state.cpp  state.hpp
src/openxum/core/games/kikotsoka-polyomino/: CMakeLists.txt  color.hpp  coordinates.cpp  coordinates.hpp  decision.cpp  decision.hpp  decision_type.hpp  engine.cpp  engine.hpp  game_type.hpp  move.cpp  move.hpp  move_type.hpp  phase.hpp  polyomino.cpp  polyomino.hpp  state.cpp  state.hpp
test/: CMakeLists.txt  main.cpp  main_kamisado.cpp  main_kikotsoka_polyomino.cpp  thread_pool.hpp
