INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src)

LINK_DIRECTORIES()

SET(OPENXUM_WS_CPP_AI_SPECIFIC_KAMISADO_HPP random_player.hpp mcts_player.hpp node.hpp)

SET(OPENXUM_WS_CPP_AI_SPECIFIC_KAMISADO_CPP random_player.cpp mcts_player.cpp node.cpp)

ADD_LIBRARY(openxum-ai-specific-kamisado SHARED ${OPENXUM_WS_CPP_AI_SPECIFIC_KAMISADO_HPP};${OPENXUM_WS_CPP_AI_SPECIFIC_KAMISADO_CPP})

INSTALL(FILES ${OPENXUM_WS_CPP_AI_SPECIFIC_KAMISADO_HPP} DESTINATION
        ${OPENXUM_WS_CPP_INCLUDE_DIRS}/openxum/ai/specific/kamisado/)
