INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src)

LINK_DIRECTORIES(
  ${Boost_LIBRARY_DIRS})

SET(OPENXUM_WS_CPP_GAMES_KAMISADO_HPP coordinates.hpp engine.hpp enum_utils.h move.hpp state.hpp)
SET(OPENXUM_WS_CPP_GAMES_KAMISADO_CPP coordinates.cpp engine.cpp move.cpp state.cpp)

ADD_LIBRARY(games-kamisado SHARED ${OPENXUM_WS_CPP_GAMES_KAMISADO_HPP};${OPENXUM_WS_CPP_GAMES_KAMISADO_CPP})

INSTALL(FILES ${OPENXUM_WS_CPP_GAMES_KAMISADO_HPP} DESTINATION
  ${OPENXUM_WS_CPP_INCLUDE_DIRS}/openxum/games/)
